# longevity-port-pipelines

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/config/: candidate_lanes.yaml  candidate_sets.yaml  claim_policy_schema.yaml  controlled_embedding_fill_worklist_schema.yaml  g3sx30_dry_run_preflight_decision_schema.yaml  g3sx30_dry_run_preflight_manifest_schema.yaml  g3sx30_first_additional_source_backed_independent_comparator_result_schema.yaml  g3sx30_first_controlled_human_elephant_mdm2_pairwise_embedding_robustness_check_schema.yaml  g3sx30_first_human_elephant_mdm2_mean_pooled_pairwise_summary_schema.yaml  g3sx30_first_independent_pairwise_embedding_control_result_schema.yaml  g3sx30_first_matched_elephant_mdm2_independent_control_result_schema.yaml  g3sx30_first_third_source_backed_independent_comparator_result_schema.yaml  g3sx30_first_three_comparator_pairwise_embedding_control_summary_schema.yaml  g3sx30_first_two_comparator_pairwise_embedding_control_summary_schema.yaml  g3sx30_manifest_aware_adapter_policy_contract_schema.yaml  (+60 more)
docs/: BUILD_BRIEF.md  PILOT_RESULTS.md  RESOURCES.md  ampk_pilot_group_summary.md  biswas_fast_grant_proposal.md  boltz_baseline_calibration_results.md  boltz_followup_panel_plan.md  boltz_live_smoke_summary.md  brandts_bat_p09874_controlled_fill_noop_checkpoint.md  brandts_bat_p09874_curated_embedding_preflight.md  brandts_bat_p09874_curated_merge_dry_run.md  brandts_bat_p09874_downstream_readiness.md  brandts_bat_p09874_live_embedding_generation.md  brandts_bat_p09874_ortholog_candidate_evidence.md  controlled_embedding_fill_protocol.md  controlled_missing_embedding_blocker_checkpoint.md  core3_validation_closure.md  coverage_provenance_repair_queue_checkpoint.md  current_gate_map.md  g3sx30_blocked_embedding_fill_exit_criteria.md  g3sx30_dry_run_observation_next_data_step_review.md  g3sx30_dry_run_preflight_cli_compatibility_note.md  g3sx30_dry_run_preflight_command_discovery_note.md  g3sx30_dry_run_preflight_execution_checklist.md  g3sx30_first_additional_source_backed_independent_comparator_result.md  g3sx30_first_controlled_human_elephant_mdm2_pairwise_embedding_robustness_check.md  g3sx30_first_human_elephant_mdm2_mean_pooled_pairwise_summary.md  g3sx30_first_independent_pairwise_embedding_control_result.md  g3sx30_first_matched_elephant_mdm2_independent_control_result.md  g3sx30_first_third_source_backed_independent_comparator_result.md  g3sx30_first_three_comparator_pairwise_embedding_control_summary.md  g3sx30_first_two_comparator_pairwise_embedding_control_summary.md  g3sx30_official_sequence_source_review_preparation.md  g3sx30_one_row_controlled_downstream_read_check_result.md  g3sx30_one_row_controlled_downstream_use_path.md  g3sx30_one_row_first_analysis_adjacent_controlled_embedding_summary.md  g3sx30_one_row_first_minimal_controlled_downstream_output.md  g3sx30_one_row_live_embedding_runtime_observation.md  g3sx30_one_row_live_embedding_strict_guardrail_wrapper.md  g3sx30_one_row_local_embedding_preflight_check_result.md  (+81 more)
scripts/: analyze_saved_embeddings.py  analyze_saved_embeddings_mapped.py  audit_4xhu_p09874_coverage.py  audit_8bot_chain_pairs.py  audit_candidate_selection.py  audit_longevity_species_coverage.py  audit_mapped_interface_selection.py  audit_missing_saved_embeddings.py  audit_negative_controls.py  audit_saved_selection_interfaces.py  audit_structure_selection_qc.py  build_core3_negatome_control_pairs.py  build_v2_divergence_profile_features.py  classify_interaction_outcomes.py  cluster_divergence_profile_features.py  compute_longevity_contrast.py  embed_negatome_control_partners.py  embed_saved_selection.py  estimate_embed_calls.py  export_core3_expanded_chimerax_figure_scripts.py  export_core3_expanded_manual_review_residue_shortlist.py  export_core3_expanded_manual_review_structure_selection_summary.py  export_core3_expanded_viewer_structure_selections.py  export_mapped_residue_deltas.py  export_structure_candidate_selections.py  fetch_candidate_set_orthologs.py  generate_mini_pilot_validation_plan.py  generate_negatome_control_pair_candidates.py  make_mini_pilot_candidate_scorecard.py  make_sirt6_mini_pilot.py  make_sirt6_mini_pilot_v2_core3_expanded.py  merge_curated_ortholog_coverage.py  patch_core3_negatome_controls.py  plot_core3_expanded_divergence_profile_clusters_2d.py  refresh_sirt6_expanded_ortholog_coverage.py  run_core3_validation_closure.py  summarize_cofolding_contrast.py  summarize_embedding_signals.py  summarize_enrichment_by_species_group.py  summarize_residue_level_candidates.py  (+3 more)
tests/: test_analyze.py  test_analyze_integration.py  test_analyze_saved_embeddings_mapped.py  test_audit_longevity_species_coverage.py  test_brandts_bat_p09874_controlled_fill_noop_checkpoint.py  test_breakage.py  test_candidate_contrast_gate.py  test_candidate_coverage_repair_decisions.py  test_candidate_lane_registry.py  test_candidate_negatome_repair_decisions.py  test_candidate_species_coverage_matrix.py  test_candidates.py  test_claim_policy_schema.py  test_cluster_divergence_profile_features.py  test_cofolding.py  test_cofolding_baseline_controls.py  test_cofolding_candidate_baseline.py  test_cofolding_candidate_preflight_batch.py  test_cofolding_controls.py  test_cofolding_dry_run_manifest.py  test_cofolding_readiness.py  test_cofolding_readiness_runtime.py  test_compute_longevity_contrast.py  test_config.py  test_contrast_gated_cofolding_manifest.py  test_control_readiness.py  test_control_readiness_schema.py  test_controlled_embedding_fill_protocol.py  test_controlled_embedding_fill_worklist.py  test_controlled_embedding_fill_worklist_schema.py  test_controlled_missing_embedding_blocker_checkpoint.py  test_core3_validation_closure.py  test_coverage_preflight.py  test_coverage_provenance_repair_queue_checkpoint.py  test_curated_analysis_enrichment.py  test_curated_analysis_plan.py  test_curated_analysis_preflight.py  test_curated_analysis_runner.py  test_curated_control_closure.py  test_curated_embedding_preflight.py  (+212 more)
(+276 files in other folders)
