[project]
name = "longevity-port-pipelines"
version = "0.1.0"
description = "Cross-species interface embedding signal check for longevity hypothesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pydantic>=2.13",
    "polars>=1.41",
    "numpy>=2.4",
    "scipy>=1.17",
    "requests>=2.32",
    "huggingface-hub>=0.34,<1.0",
    "tqdm>=4.67",
    "plotly>=6.8",
    "biotite>=1.0",
    "omnipath>=1.0",
    "typer>=0.25",
    "prefect>=3.7",
    "python-dotenv>=1.1",
    "kaleido>=1.3.0",
    "pyarrow>=24.0.0",
    "esm",
    "boltz-api>=0.36.2",
]

[project.scripts]
select = "longevity_port_pipelines.cli:select_cmd"
orthologs = "longevity_port_pipelines.cli:orthologs_cmd"
embed = "longevity_port_pipelines.cli:embed_cmd"
analyze = "longevity_port_pipelines.cli:analyze_cmd"
plot = "longevity_port_pipelines.cli:plot_cmd"
run-pipeline = "longevity_port_pipelines.cli:run_cmd"
candidates = "longevity_port_pipelines.cli:candidates_cmd"
interactome = "longevity_port_pipelines.cli:interactome_cmd"
breakage-table = "longevity_port_pipelines.cli:breakage_table_cmd"
validation-protocol = "longevity_port_pipelines.cli:validation_protocol_cmd"
render-poster = "longevity_port_pipelines.cli:render_poster_cmd"
cofolding = "longevity_port_pipelines.stages.cofolding:app"
cofolding-controls = "longevity_port_pipelines.stages.cofolding_controls:app"
cofolding-baseline-controls = "longevity_port_pipelines.stages.cofolding_baseline_controls:app"
cofolding-candidate-baseline = "longevity_port_pipelines.stages.cofolding_candidate_baseline:app"
curated-embedding-preflight = "longevity_port_pipelines.stages.curated_embedding_preflight:app"
curated-embedding-single = "longevity_port_pipelines.stages.curated_embedding_single:app"
curated-analysis-preflight = "longevity_port_pipelines.stages.curated_analysis_preflight:app"
curated-analysis-plan = "longevity_port_pipelines.stages.curated_analysis_plan:app"
curated-analysis-runner = "longevity_port_pipelines.stages.curated_analysis_runner:app"
curated-analysis-enrichment = "longevity_port_pipelines.stages.curated_analysis_enrichment:app"
curated-negatome-controls = "longevity_port_pipelines.stages.curated_negatome_controls:app"
curated-control-closure = "longevity_port_pipelines.stages.curated_control_closure:app"
species-coverage-audit = "longevity_port_pipelines.stages.species_coverage_audit:app"
cofolding-candidate-preflight-batch = "longevity_port_pipelines.stages.cofolding_candidate_preflight_batch:app"
candidate-species-coverage-matrix = "longevity_port_pipelines.stages.candidate_species_coverage_matrix:app"
candidate-contrast-gate = "longevity_port_pipelines.stages.candidate_contrast_gate:app"
longevity-contrast = "longevity_port_pipelines.stages.longevity_contrast:app"
contrast-gated-cofolding-manifest = "longevity_port_pipelines.stages.contrast_gated_cofolding_manifest:app"
strict-sirt6-contrast-panel = "longevity_port_pipelines.stages.strict_sirt6_contrast_panel:app"
strict-contrast-panel = "longevity_port_pipelines.stages.strict_contrast_panel:app"
gated-contrast = "longevity_port_pipelines.stages.gated_contrast:app"
tp53-mdm2-pilot-manifest-validator = "longevity_port_pipelines.stages.tp53_mdm2_pilot_manifest_validator:app"
tp53-mdm2-pilot-coverage-preflight = "longevity_port_pipelines.stages.tp53_mdm2_pilot_coverage_preflight:app"
lane-manifest-summary = "longevity_port_pipelines.stages.lane_manifest:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "omnipath.*",
    "biotite.*",
    "scipy.*",
]
ignore_missing_imports = true

# Prefect's @flow/@task decorators are typed in a way mypy reads as "untyped
# decorator" / overload mismatch (esp. with **kwargs spread). Don't let that mask
# real errors elsewhere; relax it for the flow module only.
[[tool.mypy.overrides]]
module = ["longevity_port_pipelines.flow"]
disable_error_code = ["untyped-decorator", "misc", "call-overload"]

[[tool.mypy.overrides]]
module = ["longevity_port_pipelines.stages.mapped_interface"]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
esm = { git = "https://github.com/Biohub/esm.git", rev = "c94ed8d" }

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.0",
    "pre-commit>=4.6",
    "types-requests>=2.33",
    "types-tqdm>=4.67",
]
